RESOLVED FIXED258398
[TextureMapper] Wrong flags passed to BitmapTextureGL::create in some cases
https://bugs.webkit.org/show_bug.cgi?id=258398
Summary [TextureMapper] Wrong flags passed to BitmapTextureGL::create in some cases
Carlos Garcia Campos
Reported 2023-06-22 03:50:16 PDT
There are some calls passing the internal format as flags.
Attachments
Carlos Garcia Campos
Comment 1 2023-06-22 03:53:38 PDT
EWS
Comment 2 2023-06-23 00:53:30 PDT
Committed 265452@main (7529d2ec5c77): <https://commits.webkit.org/265452@main> Reviewed commits have been landed. Closing PR #15190 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-23 00:54:15 PDT
Note You need to log in before you can comment on or make changes to this bug.