[TextureMapper] Wrong flags passed to BitmapTextureGL::create in some cases https://bugs.webkit.org/show_bug.cgi?id=258398

Reviewed by Michael Catanzaro.

There are some calls passing the internal format as flags.

* Source/WebCore/platform/graphics/texmap/TextureMapper.h:
* Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::createTexture):
* Source/WebCore/platform/graphics/texmap/TextureMapperGL.h:
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerBuffer.cpp:
(WebCore::TextureMapperPlatformLayerBuffer::clone):

Canonical link: https://commits.webkit.org/265452@main