Source/WebCore/platform/graphics/texmap/TextureMapperGL.h
@@ -81,8 +81,7 @@ public:
     void endClip() override;
     IntRect clipBounds() override;
     IntSize maxTextureSize() const override { return IntSize(2000, 2000); }
-    Ref<BitmapTexture> createTexture() override { return createTexture(GL_DONT_CARE); }
-    Ref<BitmapTexture> createTexture(GLint internalFormat) override;
+    Ref<BitmapTexture> createTexture() override;
     void setDepthRange(double zNear, double zFar) override;
 
     void drawFiltered(const BitmapTexture& sourceTexture, const BitmapTexture* contentTexture, const FilterOperation&, int pass);
